# scheme

./: .gitignore  .travis.yml  Build.hs  LICENSE  README.md  TODO.md  build  build-cabal  decisions.md  package.yaml  repl  repl-cabal  run  run-cabal  scheme.cabal  stack.yaml
.github/workflows/: haskell-ci.yml  haskell.yml
archive/: Parse3.hs  Parse4.hi  Parse4.hs  ParserOld.hs  testReadScript.hs
docs/: 00_overview.md  01_introduction.md  02_parsing.md  03_evaluation.md  04_errors.md  05_primitives.md  06_repl.md  07_io.md  07_mutation.md  08_closures.md  08_stdlib.md  09_io.md  09_test.md  10_conclusion.md  10_stdlib.md  11_conclusion.md  home.md  outline.notes
exec/: Main.hs
lib/: stdlib.scm
pdf/: make_pandoc.sh
resources/: page.tmpl
src/: ANorm.hs  Cli.hs  Eval.hs  Eval.hs.orig  LispVal.hs  LispVal.hs.orig  Main.hs  Parse2.hs  Parse3.hs  Parse4.hs  Parser.hs  Pretty.hs  Prim.hs  Prim.hs.orig  Repl.hs
test/: Test.hs  define.scm  define_lambda.scm  define_order.scm  eval_boolean_ops.scm  eval_lambda.scm  if_alt.scm  let.scheme  lib.scm  stdlib.scm  stdlib_mod.scm  test_apply.scheme  test_apply.scm  test_args.scm  test_cadadr.scm  test_car.scheme  test_cdr.scheme  test_evalargs.scm  test_fix.scm  test_fix2.scm  test_fold.scm  test_gt.scm  test_let.scm  test_mutual_rec.scm  test_null.scm  test_number_ops.scm  test_quote.scm  test_scope1.scm  test_scope2.scm  test_scope3.scm  test_scope4.scm
test-hs/: Golden.hs  Spec.hs
test-hs/Golden/: Main.hs
test-hs/Spec/: Main.hs
test/ans/: eval_boolean_ops.txt  test_args.txt  test_cdr.txt  test_gt.txt  test_mutual_rec.txt  test_quote.txt  test_scope1.txt  test_scope3.txt
