name:                scheme
version:             0.1
synopsis:            Write You a Scheme
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     
    Repl
    Parser
    LispVal
    Pretty
    Eval
    Cli
    Prim

  default-extensions:
    OverloadedStrings

  build-depends:       
    base           >= 4.8 && <5.0,
    mtl            >= 2.2 && <2.3,
    parsec         >= 3.1 && <3.2,
    containers     >= 0.5 && <0.6,
    wl-pprint-text >= 1.1 && <1.2,
    text           >= 1.2 && <1.3,
    transformers   >= 0.4 && <0.6,
    haskeline      >= 0.7 && <0.8,
    mtl            >= 2.2.1, 
    directory -any,
    exceptions -any,
    resourcet -any, 
    optparse-applicative -any
 
  hs-source-dirs: src
  default-language: Haskell2010

executable scheme
  main-is: Main.hs
  build-depends: 
    base >= 4.8 && < 5,
    scheme == 0.1
  hs-source-dirs: exec
  default-language: Haskell2010

executable docs
  main-is: Build.hs
  build-depends:       
    base     >= 4.8 && < 5.0,
    shake    >= 0.15 && <0.16,
    pandoc   >= 1.15 && <1.16
  default-language: Haskell2010
