cabal-version:   2.4
name:            scheme
version:         0.1
synopsis:        Write You a Scheme
description:     Write You a Scheme v2.
category:        Tutorials
author:          Adam Wespiser
maintainer:      Adam Wespiser <adamwespiser@gmail.com>
license:         MIT
license-file:    LICENSE
copyright:       2021 Adam Wespiser
build-type:      Simple
extra-doc-files:
  README.md
  TODO.md

tested-with:     GHC ==8.10.4

source-repository head
  type:     git
  location: https://github.com/write-you-a-scheme-v2/scheme.git

common common-options
  build-depends:      base >=4.8 && <5.0
  other-modules:      Paths_scheme
  autogen-modules:    Paths_scheme
  ghc-options:
    -Wall -Wextra -Wcompat -Widentities
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -fwrite-ide-info -hiedir=.hie

  --    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  default-extensions:
    OverloadedStrings
    StrictData

  default-language:   Haskell2010

library
  import:          common-options
  exposed-modules:
    Cli
    Eval
    LispVal
    Parser
    Prim
    Repl

  hs-source-dirs:  src/
  build-depends:
    , containers
    , directory
    , haskeline
    , HTTP
    , mtl
    , optparse-applicative
    , parsec
    , text

executable docs
  import:        common-options
  main-is:       Build.hs
  build-depends:
--    , pandoc
    , shake

executable scheme
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: exec
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  scheme

test-suite test
  import:         common-options
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test-hs/Spec/
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , hspec
    , scheme
    , text

test-suite test-golden
  import:          common-options
  type:            exitcode-stdio-1.0
  main-is:         Main.hs
  other-modules:   Paths_scheme
  autogen-modules: Paths_scheme
  hs-source-dirs:  test-hs/Golden
  ghc-options:     -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , bytestring
    , scheme
    , tasty
    , tasty-golden
    , text
